Changed Contact page name in index.html nav

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
           </li>
           <li role="presentation">
             <a href="contact.html" role="menuitem"
-              class="navigation-list__item">Contact</a>
+              class="navigation-list__item">Contact Me</a>
           </li>
         </ul>
       </nav>
