aligned text to center

--- a/contact.html
+++ b/contact.html
@@ -29,7 +29,7 @@
       </ul>
     </nav>
   </header>
-
+  <div style='display: flex; flex-direction: column; align-items: center'>
     <h1>Contact Me</h1>
     <p>Felicity James<br>2922 Aldrich Ave S, Apt 317 <br>Minneapolis, MN 55408</p>
     <a href="mailto:felicitygjames@gmail.com">felicitygjames@gmail.com</a>
