--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Home</title>
     <link rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css"
-      integrity="sha512-NhSC1YmyruXifcj/KFRWoC561YpHpc5Jtzgvbuzx5VozKpWvQ+4nXhPdFgmx8xqexRcpAglTj9sIBWINXa8x5w=="crossorigin="anonymous"
+      integrity="sha512-NhSC1YmyruXifcj/KFRWoC561YpHpc5Jtzgvbuzx5VozKpWvQ+4nXhPdFgmx8xqexRcpAglTj9sIBWINXa8x5w==" crossorigin="anonymous"
       />
     <link href="https://fonts.googleapis.com/css2?family=Raleway&display=swap"
       rel="stylesheet">
@@ -14,8 +14,7 @@
   </head>
   <body>
     <header class="page-header">
-      <img src="img/felicitylogo.jpg" class="responsive" width="140px" height="60px" alt="Felicitys logo"
-        class="page-header__item">
+      <img src="img/felicitylogo.jpg" class="responsive page-header__item" width="140px" height="60px" alt="Felicitys logo">
       <nav class="main-navigation page-header__item">
         <ul role="menubar" class="navigation-list">
           <li role="presentation">
@@ -52,7 +51,7 @@
     <button class="button_secondary">Second Button</button>
     <script src="js/tota11y.min.js"></script>
     <footer class="page-footer">
-      <p>Find me on:</p>
+      <p>Find ME on:</p>
       <div class="social media">
         <a href="http://www.facebook.com" target="_blank">
           <img src="img/facebookicon.svg" alt="Facebook" />
