changed ME to me on index page

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
     <button class="button_secondary">Second Button</button>
     <script src="js/tota11y.min.js"></script>
     <footer class="page-footer">
-      <p>Find ME on:</p>
+      <p>Find me on:</p>
       <div class="social media">
         <a href="http://www.facebook.com" target="_blank">
           <img src="img/facebookicon.svg" alt="Facebook" />
