added ! on index page

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
       <img src="img/felicityjamesheadshot.jpg" class="profile__portrait"
         alt="Felicity James photo"
         />
-      <h1>Hello World!</h1>
+      <h1>Hello World!!</h1>
       <p>My name is Felicity James. I'm a <span>web</span> developer living in
         Minneapolis, Minnesota.</p>
       <a href="https://www.github.com/felicitygjames" target="_blank">Check out
