--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   </head>
   <body>
     <header class="page-header">
-      <img src="img/felicitylogo.jpg" class="responsive page-header__item" width="140px" height="60px" alt="Felicitys logo">
+      <img src="img/felicitylogo.jpg" class="responsive page-header__item" width="140" height="60" alt="Felicitys logo">
       <nav class="main-navigation page-header__item">
         <ul role="menubar" class="navigation-list">
           <li role="presentation">
