--- a/about.html
+++ b/about.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="utc-8">
+    <meta charset="utf-8">
     <link rel="icon" href="fjfavicon.ico">
     <title>About Me</title>
     <link rel="stylesheet"
