--- a/about.html
+++ b/about.html
@@ -14,7 +14,7 @@
   </head>
   <body>
     <header class="page-header">
-      <img src="img/felicitylogo.jpg" width="200px" alt="Felicitys logo"
+      <img src="img/felicitylogo.jpg" width="200" alt="Felicitys logo"
         class="page-header__item">
       <nav class="main-navigation page-header__item">
         <ul role="menubar" class="navigation-list">
