deleted px from gif

--- a/about.html
+++ b/about.html
@@ -73,7 +73,7 @@
 
       <a href="#" class="button about-me-stuff" download>Download my CV</a>
       <br>
-      <img src="img/Gif.gif" width="200px" alt="Calvin-and-hobbes"
+      <img src="img/Gif.gif" width="200" alt="Calvin-and-hobbes"
         class="page-header__item">
       <script src="js/tota11y.min.js"></script>
       <footer class="page-footer">
