added closing div tag

--- a/about.html
+++ b/about.html
@@ -70,7 +70,7 @@
           </tr>
         </tbody>
       </table>
-
+      </div>
       <a href="#" class="button about-me-stuff" download>Download my CV</a>
       <br>
       <img src="img/Gif.gif" width="200" alt="Calvin-and-hobbes"
