px and lang edits to contact page

--- a/contact.html
+++ b/contact.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
   <head>
     <meta charset="utc-8">
     <link rel="icon" href="fjfavicon.ico">
@@ -10,7 +10,7 @@
   </head>
   <body>
   <header class="page-header">
-    <img src="img/felicitylogo.jpg" width="200px" alt="Felicitys logo">
+    <img src="img/felicitylogo.jpg" width="200" alt="Felicitys logo">
     <nav class="main-navigation page-header__item">
       <ul role="menubar" class="navigation-list">
         <li role="presentation">
