fixed phone number spaces on contact page

--- a/contact.html
+++ b/contact.html
@@ -34,7 +34,7 @@
     <p>Felicity James<br>2922 Aldrich Ave S, Apt 317 <br>Minneapolis, MN 55408</p>
     <a href="mailto:felicitygjames@gmail.com">felicitygjames@gmail.com</a>
     <br>
-    <a href="tel:+1 206 790 5862">Cell number: +1 (206) 790-5862</a>
+    <a href="tel:+12067905862">Cell number: +1 (206) 790-5862</a>
     <br>
     <a href="skype:violinfelicity">Skype</a>
     <br>
