--- a/contact.html
+++ b/contact.html
@@ -43,7 +43,7 @@
       <label class="standard-label" for="contact-email">Email:*</label>
       <input type="email" id="contact-email" placeholder="johndoe@abc.com" required>
 
-      <label class="standard-label" for="contact-phone"></label>Phone number:</label>
+      <label class="standard-label" for="contact-phone">Phone number:</label>
       <input type="tel" id="contact-phone" placeholder="(111) 111-1111" pattern="\d{3}[\-]\d{3}[\-]\d{4}">
 
       <label class="standard-label" for="contact-message">Message:*</label>
