added closing div tag

--- a/contact.html
+++ b/contact.html
@@ -51,6 +51,7 @@
         required></textarea>
         <input type="submit" value="Send message">
     </form>
+    </div>
     <script src="js/tota11y.min.js"></script>
 
     <footer class="page-footer">
